# Lumi

./: .env.example  .gitignore  README.md  TTS_LOGGING_SUMMARY.md  alembic.ini  pyproject.toml  run.py
aimodels/: README.md
aistudio/: main.py
aistudio/api/v1/: ollama_controller.py  rag_api.py  rag_upload.py  role_controller.py  (+7 more)
aistudio/config/: config.py
aistudio/core/: config.py  database.py
aistudio/dependencies/: database.py
aistudio/langchain_loaders/: rag_service.py  rag_singleton.py  s3_loader.py
aistudio/migration/: env.py
aistudio/models/: jwt_token.py  ollama_models.py  role.py  subject.py  subject_type.py  transcription_log.py  tts_log.py  user.py  user_subject.py
aistudio/repositories/: __init__.py  fastapi_s3.py  jwt_repository.py  role_repository.py  subject_repository.py  subject_type_repository.py  transcription_log_repository.py  tts_log_repository.py  user_repository.py  user_subject_repository.py
aistudio/schemas/: book_request.py  profile_request.py  refresh_token.py  role_change.py  role_create.py  role_out.py  role_update.py  subject_create.py  subject_filter.py  subject_out.py  subject_type_create.py  subject_type_out.py  subject_type_update.py  subject_update.py  transcription_log_out.py  tts_log_out.py  tts_request.py  user_create.py  user_login.py  user_out.py  user_subject_create.py  user_subject_filter.py  user_subject_out.py  user_subject_update.py  user_update.py
aistudio/seeders/: context_seeder.py  user_seeder.py
aistudio/services/: docx2txt_service.py  ollama_service.py  role_service.py  subject_service.py  subject_type_service.py  tmp_file_service.py  transcribe_service.py  transcription_log_service.py  translate_service.py  tts_client.py  tts_log_service.py  tts_service.py  user_service.py  user_subject_service.py
aistudio/utils/: audio.py  ffmpeg_path.py  jwt_utils.py  role_checker.py
tests/: check_alembic.py  check_jwt_table.py  check_table_structure.py  create_jwt_table.py  fix_alembic_version.py  fix_migration.py  make_admin.py  test_admin_access.py  test_api.py  test_authorization_logic.py  test_db.py  test_integration.py  test_jwt_system.py  test_service.py  test_transcription_logging_integration.py  test_tts_logging.py
(+29 files in other folders)
