[project]
name = "aistudio"
version = "0.1.0"
description = ""
authors = [
    {name = "lumi"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "mysql-connector-python (>=9.3.0,<10.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "jmespath (>=1.0.1,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "s3transfer (>=0.13.0,<0.14.0)",
    "requests (>=2.32.4,<3.0.0)",
    "boto3 (>=1.39.3,<2.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)",
    "faiss-cpu (>=1.11.0.post1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pypdf (>=5.8.0,<6.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "docx2txt (>=0.9,<0.10)",
    "unstructured (>=0.18.11,<0.19.0)",
    "langchain-ollama (>=0.3.6,<0.4.0)",
    "openai (>=1.97.1,<2.0.0)",
    "vosk (>=0.3.45,<0.4.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "yandex-speechkit (>=1.5.0,<2.0.0)",
    "snac (>=1.2.1,<2.0.0)",
    "llvmlite (>=0.44.0,<0.45.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "hf-xet (>=1.1.9,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "textwrap3 (>=0.9.2,<0.10.0)"

]

#[tool.poetry.scripts]
#start = "aistudio.main:app"
[tool.poetry.scripts]
start = "run:main"
#[tool.poetry]
#packages = [{ include = "app" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
